--- a/public/index.html
+++ b/public/index.html
@@ -24,8 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
-   <script src="https://d3js.org/d3.v7.min.js" charset="utf-8"></script>
+    <title>Storeroom</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
